style.css
@import '@fortawesome/fontawesome-free/css/all.min.css';


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;

}

html,
body {
  height: 100%;
  width: 100%;
}

body {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  background-color: rgba(29, 31, 32, 0.95);
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #1c1e21;
  width: 420px;
  padding: 30px;
  border-radius: 13px;
  transition: transform 0.3s;
}

.card:hover {
  transform: translateY(-10px);
}

.pfp {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  object-fit: cover;
}

.name {

  margin-top: 20px;
  margin-bottom: 10px;
}

.name,
.desc {
  text-align: center;

}

.desc {
  margin-bottom: 20px;
}

.links-row {
  display: flex;
  justify-content: center;
  gap: 12px;
  margin-bottom: 20px;
}


a {
  color: #fff;
  /* Set it to your preferred color */
  text-decoration: none;
  /* Optional: Removes underline */
}

a:visited,
a:hover,
a:active {
  color: #fff;
  /* Ensures no color change */
}


.fa-brands {
  font-size: 20px;
}

.inner-card {
  align-self: flex-start;
  display: flex;
  gap: 10px;
}

.proj-desc {
  color: rgb(96, 96, 96);
}

.projects-row {
  align-self: flex-start;
  padding-left: 20px;
}

.projects-row h3 {
  margin-bottom: 15px;
}

.projects-row li {
  margin-bottom: 10px;
}

